Dark Mode Fixes and Modal Fixes
-Modal now has a scroll to work on all small screens.
-Dark mode text is now fixed on modals show it doesn't show white, unreadable, text.

--- a/teacher-toolbox/src/app/classrooms/classrooms.component.css
+++ b/teacher-toolbox/src/app/classrooms/classrooms.component.css
@@ -17,3 +17,15 @@
 .container {
     width: 50%;
 }
+
+.modal-body{
+    color:black;
+}
+
+.modal-header{
+    color:black;
+}
+
+#exportStudentsTemplate{
+    color:green;
+}
