--- a/teacher-toolbox/src/app/dashboard/dashboard.component.css
+++ b/teacher-toolbox/src/app/dashboard/dashboard.component.css
@@ -36,3 +36,17 @@ body {
 * {
     font-family: "Roboto", sans-serif;
 }
+
+.dashboardContent.dark-mode {
+    background-color: #2d3436;
+    color: rgb(207, 207, 207);
+}
+
+.dashboardContent.light-mode {
+    background-color: rgb(221, 221, 221);
+    color: #2d3436;
+}
+
+.dashboardstuff{
+    padding-top: 2%;
+}
