--- a/teacher-toolbox/src/app/students/students-details/students-details.component.css
+++ b/teacher-toolbox/src/app/students/students-details/students-details.component.css
@@ -47,3 +47,11 @@ h3 {
     width: 7.5em;
     margin: 0 0.5em 1em 0;
 }
+
+.modal-body{
+    color:black;
+}
+
+.modal-header{
+    color:black;
+}
