--- a/teacher-toolbox/src/app/students/students.component.css
+++ b/teacher-toolbox/src/app/students/students.component.css
@@ -26,3 +26,17 @@
 #exportStudentsTemplate {
     display: none;
 }
+
+.modal-body{
+    color:black;
+    height: 500px;
+    overflow-y: scroll;
+}
+
+.modal-header{
+    color:black;
+}
+
+.modal{
+    overflow-y:auto;
+}
